--- a/00_explore_data.ipynb
+++ b/00_explore_data.ipynb
@@ -48,8 +48,9 @@
     "TOP = 'top'\n",
     "BOT = 'bottom'\n",
     "\n",
-    "TARGET_SIZE = (224, 224)\n",
-    "# TARGET_SIZE = (512, 512)"
+    "# SIZE = 224\n",
+    "SIZE = 299\n",
+    "# SIZE = 512"
    ]
   },
   {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -85,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05d931c456b647afba577696e57dd70c",
+       "model_id": "02e85a2e7a5d481a8853f69ea0aac166",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,6 +96,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.show_image(idx)>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -129,30 +140,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e90f11bda7b3415795f67cc12dc78b92",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=3042, description='idx', max=6085), Output()), _dom_classes=('widget-int…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.transform_image(idx)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def scale_image(idx):\n",
+    "def transform_image(idx):\n",
     "    \"\"\"Display the image and its mask.\"\"\"\n",
     "    subject_id = int(splitext(images[idx])[0])\n",
     "\n",
     "    path = IMG_DIR / images[idx]\n",
     "    image = Image.open(path)\n",
     "\n",
-    "    size = image.size\n",
-    "    image = image.resize(TARGET_SIZE)\n",
-    "\n",
-    "    scale_x = TARGET_SIZE[0] / size[0]\n",
-    "    scale_y = TARGET_SIZE[1] / size[1]\n",
-    "\n",
-    "    print(scale_x, scale_y)\n",
     "    rec = boxes.loc[subject_id, :]\n",
     "    box = json.loads(rec.at[BOX])\n",
+    "\n",
+    "    size = image.size\n",
+    "    image = image.resize((SIZE, SIZE))\n",
+    "\n",
+    "    scale_x = SIZE / size[0]\n",
+    "    scale_y = SIZE / size[1]\n",
+    "    \n",
     "    x0 = box[LFT] * scale_x\n",
     "    y0 = box[TOP] * scale_y\n",
     "    x1 = box[RGT] * scale_x\n",
     "    y1 = box[BOT] * scale_y\n",
+    "    \n",
+    "    image = image.transpose(Image.FLIP_TOP_BOTTOM)\n",
+    "    image = image.transpose(Image.ROTATE_90)\n",
+    "\n",
+    "    # x0, y0, x1, y1 =  SIZE - x1, y0, SIZE - x0, y1  # FLIP_LEFT_RIGHT\n",
+    "    x0, y0, x1, y1 =  x0, SIZE - y1, x1, SIZE - y0  # FLIP_TOP_BOTTOM\n",
+    "    x0, y0, x1, y1 = y0, SIZE - x0, y1, SIZE - x1  # ROTATE_90\n",
+    "    # x0, y0, x1, y1 =  SIZE - x0, SIZE - y0, SIZE - x1, SIZE - y1  # ROTATE_180\n",
+    "    # x0, y0, x1, y1 =  SIZE - y0, x0, SIZE - y1, x1  # ROTATE_270\n",
+    "    \n",
     "    draw = ImageDraw.Draw(image)\n",
     "    draw.rectangle([x0, y0, x1, y1], outline='#ff0000')\n",
     "\n",
@@ -160,7 +206,7 @@
     "    plt.imshow(image)\n",
     "\n",
     "\n",
-    "interact(scale_image, idx=(0, len(images) - 1))\n",
+    "interact(transform_image, idx=(0, len(images) - 1))\n",
     "# show_image(3042)"
    ]
   },
