Update error report output

--- a/02_resnet.ipynb
+++ b/02_resnet.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-06-20T10:00:54-04:00\n",
+      "2019-06-20T11:01:25-04:00\n",
       "\n",
       "CPython 3.7.3\n",
       "IPython 7.5.0\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,7 @@
     "from pathlib import Path\n",
     "import pdb\n",
     "\n",
+    "from tqdm import tqdm\n",
     "from ipywidgets import interact\n",
     "from PIL import Image, ImageDraw, ImageFont\n",
     "import numpy as np\n",
@@ -354,13 +355,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intersetion_over_area(box1, box2):\n",
+    "    area1 = (box1[2] - box1[0]) * abs(box1[3] - box1[1])\n",
+    "    area2 = (box2[2] - box2[0]) * abs(box2[3] - box2[1])\n",
+    "    inter = (min(box1[2], box2[2]) - max(box1[0], box2[0])) \\\n",
+    "        * (min(box1[3], box2[3]) - max(box1[1], box2[1]))\n",
+    "    inter = max(0, inter)\n",
+    "    return abs(inter / (area1 + area2 - inter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "312ba6d832dd4ed0979a790864aa85cd",
+       "model_id": "550de4bd707f4751b265f740290f5c43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,7 +393,7 @@
        "<function __main__.show_results(idx)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,35 +404,281 @@
     "\n",
     "def show_results(idx):\n",
     "    image, target = val_dataset[idx]\n",
-    "    target_class = CATS[target['labels'][0].numpy()]\n",
+    "\n",
+    "    t_class = CATS[target['labels'][0].numpy()]\n",
+    "    t_box = target['boxes'][0].numpy()\n",
     "\n",
     "    with torch.no_grad():\n",
     "        prediction = model([image.to(DEVICE)])\n",
     "\n",
-    "    predicted_class = CATS[prediction[0]['labels'].cpu()[0].numpy()]\n",
+    "    p_class = CATS[prediction[0]['labels'].cpu()[0].numpy()]\n",
+    "    p_box = prediction[0]['boxes'].cpu()[0].numpy()\n",
     "\n",
-    "    print(f'Target   (blue): {target_class}')\n",
-    "    print(f'Predicted (red): {predicted_class}')\n",
+    "    iou = round(intersetion_over_area(t_box, p_box), 2)\n",
+    "\n",
+    "    print(f'{target[\"image_id\"][0].numpy()}')\n",
+    "    print(f'Target   (blue): {t_class}')\n",
+    "    print(f'Predicted (red): {p_class}')\n",
+    "    print(f'IoU:             {iou:0.2}')\n",
     "\n",
     "    image = Image.fromarray(image.mul(255).permute(1, 2, 0).byte().numpy())\n",
     "\n",
     "    draw = ImageDraw.Draw(image)\n",
     "\n",
     "    box = target['boxes'][0].numpy()\n",
-    "    draw.rectangle(box, width=4, outline='blue')\n",
-    "\n",
-    "    for box in prediction[0]['boxes']:\n",
-    "        box = box.cpu().numpy()\n",
-    "        draw.rectangle(box, width=4, outline='red')\n",
-    "        break\n",
+    "    draw.rectangle(t_box, width=4, outline='blue')\n",
+    "    draw.rectangle(p_box, width=4, outline='red')\n",
     "\n",
     "    plt.figure(figsize=(10, 10))\n",
     "    plt.imshow(image)\n",
     "\n",
     "\n",
     "interact(show_results, idx=(0, valid.shape[0] - 1))\n",
-    "# show_results(754)"
+    "# show_results(763)  \n",
+    "\n",
+    "# Sideways: 523-541  748-754"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1216 items\n",
+      "\n",
+      "There were 1133 (93.17%) correctly identified classes\n",
+      "\n",
+      "Handwritten -> Typewritten errors (4.93%):\n",
+      "(6, 2995232)\n",
+      "(54, 2995528)\n",
+      "(64, 2995577)\n",
+      "(103, 4128276)\n",
+      "(110, 4128309)\n",
+      "(117, 4128343)\n",
+      "(149, 4128476)\n",
+      "(150, 4128490)\n",
+      "(152, 4128495)\n",
+      "(153, 4128501)\n",
+      "(168, 4128577)\n",
+      "(170, 4128594)\n",
+      "(189, 4128718)\n",
+      "(218, 4128891)\n",
+      "(279, 10667640)\n",
+      "(281, 10667646)\n",
+      "(382, 10668130)\n",
+      "(422, 11779826)\n",
+      "(443, 11779934)\n",
+      "(447, 11779943)\n",
+      "(449, 11779945)\n",
+      "(453, 11779971)\n",
+      "(458, 11779986)\n",
+      "(469, 11780060)\n",
+      "(477, 11780091)\n",
+      "(522, 11780315)\n",
+      "(540, 11780399)\n",
+      "(580, 11780657)\n",
+      "(613, 11780818)\n",
+      "(643, 11780960)\n",
+      "(691, 11781208)\n",
+      "(701, 11781263)\n",
+      "(757, 11781525)\n",
+      "(777, 11781624)\n",
+      "(789, 11781683)\n",
+      "(815, 11781762)\n",
+      "(817, 11781766)\n",
+      "(824, 11781792)\n",
+      "(877, 11782044)\n",
+      "(891, 11782100)\n",
+      "(894, 11782122)\n",
+      "(905, 11782164)\n",
+      "(925, 11782306)\n",
+      "(927, 11782329)\n",
+      "(941, 11782373)\n",
+      "(942, 11782375)\n",
+      "(943, 11782380)\n",
+      "(947, 11782398)\n",
+      "(953, 11782433)\n",
+      "(966, 11782507)\n",
+      "(979, 11782571)\n",
+      "(1033, 11782825)\n",
+      "(1054, 11782952)\n",
+      "(1060, 11782989)\n",
+      "(1065, 11783015)\n",
+      "(1115, 11783267)\n",
+      "(1119, 11783287)\n",
+      "(1131, 11783367)\n",
+      "(1139, 11783403)\n",
+      "(1181, 11783604)\n",
+      "\n",
+      "Typewritten -> Handwritten errors (1.89%):\n",
+      "(2, 2995205)\n",
+      "(5, 2995228)\n",
+      "(13, 2995267)\n",
+      "(25, 2995365)\n",
+      "(49, 2995484)\n",
+      "(76, 2995615)\n",
+      "(164, 4128563)\n",
+      "(172, 4128619)\n",
+      "(177, 4128660)\n",
+      "(214, 4128864)\n",
+      "(230, 4128929)\n",
+      "(464, 11780004)\n",
+      "(517, 11780285)\n",
+      "(724, 11781350)\n",
+      "(763, 11781551)\n",
+      "(859, 11781971)\n",
+      "(871, 11782013)\n",
+      "(876, 11782041)\n",
+      "(948, 11782403)\n",
+      "(1050, 11782913)\n",
+      "(1055, 11782953)\n",
+      "(1064, 11783009)\n",
+      "(1122, 11783308)\n",
+      "\n",
+      "Intersection over union >= 90%: 1097 (90.21%)\n",
+      "\n",
+      "Intersection over union 80-90%: 103 (8.47%)\n",
+      "\n",
+      "Intersection over union < 80%: 16 (1.32%)\n",
+      "(7, 2995235)\n",
+      "(67, 2995585)\n",
+      "(136, 4128416)\n",
+      "(145, 4128467)\n",
+      "(171, 4128609)\n",
+      "(306, 10667753)\n",
+      "(410, 10668286)\n",
+      "(496, 11780193)\n",
+      "(509, 11780234)\n",
+      "(763, 11781551)\n",
+      "(1032, 11782819)\n",
+      "(1077, 11783073)\n",
+      "(1122, 11783308)\n",
+      "(1177, 11783591)\n",
+      "(1182, 11783605)\n",
+      "(1213, 11783734)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "\n",
+    "\n",
+    "def bin_results():\n",
+    "    results = {\n",
+    "        'eq': 0,\n",
+    "        '1->2': [],\n",
+    "        '2->1': [],\n",
+    "        '>=90': 0,\n",
+    "        '<90': 0,\n",
+    "        '<80': [],\n",
+    "        'n': len(val_dataset),\n",
+    "    }\n",
+    "\n",
+    "    for i, (image, target) in tqdm(enumerate(val_dataset)):\n",
+    "\n",
+    "        image_id = target[\"image_id\"][0].numpy().item()\n",
+    "\n",
+    "        t_class = target['labels'][0].numpy()\n",
+    "        t_box = target['boxes'][0].numpy()\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            prediction = model([image.to(DEVICE)])\n",
+    "\n",
+    "        p_class = prediction[0]['labels'].cpu()[0].numpy()\n",
+    "        p_box = prediction[0]['boxes'].cpu()[0].numpy()\n",
+    "\n",
+    "        if t_class == p_class:\n",
+    "            results['eq'] += 1\n",
+    "        elif t_class == 1:\n",
+    "            results['1->2'].append((i, image_id))\n",
+    "        else:\n",
+    "            results['2->1'].append((i, image_id))\n",
+    "\n",
+    "        iou = round(intersetion_over_area(t_box, p_box), 2)\n",
+    "\n",
+    "        if iou < 0.8:\n",
+    "            results['<80'].append((i, image_id))\n",
+    "        elif iou < 0.9:\n",
+    "            results['<90'] += 1\n",
+    "        else:\n",
+    "            results['>=90'] += 1\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "# results = bin_results()\n",
+    "\n",
+    "print(f'There are {results[\"n\"]} items')\n",
+    "print()\n",
+    "\n",
+    "per = round(results[\"eq\"] / results[\"n\"] * 100.0, 2)\n",
+    "print(f'There were {results[\"eq\"]} ({per}%) correctly identified classes')\n",
+    "print()\n",
+    "\n",
+    "per = round(len(results[\"1->2\"]) / results[\"n\"] * 100.0, 2)\n",
+    "print(f'Handwritten -> Typewritten errors ({per}%):')\n",
+    "for result in results[\"1->2\"]:\n",
+    "    print(result)\n",
+    "print()\n",
+    "\n",
+    "per = round(len(results[\"2->1\"]) / results[\"n\"] * 100.0, 2)\n",
+    "print(f'Typewritten -> Handwritten errors ({per}%):')\n",
+    "for result in results[\"2->1\"]:\n",
+    "    print(result)\n",
+    "print()\n",
+    "\n",
+    "per = round(results[\">=90\"] / results[\"n\"] * 100.0, 2)\n",
+    "print(f'Intersection over union >= 90%: {results[\">=90\"]} ({per}%)')\n",
+    "print()\n",
+    "\n",
+    "per = round(results[\"<90\"] / results[\"n\"] * 100.0, 2)\n",
+    "print(f'Intersection over union 80-90%: {results[\"<90\"]} ({per}%)')\n",
+    "print()\n",
+    "\n",
+    "per = round(len(results[\"<80\"]) / results[\"n\"] * 100.0, 2)\n",
+    "print(f'Intersection over union < 80%: {len(results[\"<80\"])} ({per}%)')\n",
+    "for result in results[\"<80\"]:\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
