Improved results display with more data

--- a/02_resnet.ipynb
+++ b/02_resnet.ipynb
@@ -355,13 +355,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "def intersetion_over_area(box1, box2):\n",
-    "    area1 = (box1[2] - box1[0]) * abs(box1[3] - box1[1])\n",
-    "    area2 = (box2[2] - box2[0]) * abs(box2[3] - box2[1])\n",
+    "    area1 = abs(box1[2] - box1[0]) * abs(box1[3] - box1[1])\n",
+    "    area2 = abs(box2[2] - box2[0]) * abs(box2[3] - box2[1])\n",
     "    inter = (min(box1[2], box2[2]) - max(box1[0], box2[0])) \\\n",
     "        * (min(box1[3], box2[3]) - max(box1[1], box2[1]))\n",
     "    inter = max(0, inter)\n",
@@ -370,18 +370,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "550de4bd707f4751b265f740290f5c43",
+       "model_id": "af55e709a69145118201bd82a75986c9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=607, description='idx', max=1215), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=607, description='idx', max=1215), Dropdown(description='figsize', optio…"
       ]
      },
      "metadata": {},
@@ -390,10 +390,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.show_results(idx)>"
+       "<function __main__.show_results(idx, figsize)>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
     "model.eval()\n",
     "\n",
     "\n",
-    "def show_results(idx):\n",
+    "def show_results(idx, figsize):\n",
     "    image, target = val_dataset[idx]\n",
     "\n",
     "    t_class = CATS[target['labels'][0].numpy()]\n",
@@ -415,28 +415,39 @@
     "    p_box = prediction[0]['boxes'].cpu()[0].numpy()\n",
     "\n",
     "    iou = round(intersetion_over_area(t_box, p_box), 2)\n",
+    "    class_flag = '' if t_class == p_class else 'NOT EQUAL'\n",
+    "    box_flag = '' if iou >= 0.8 else 'AREA MISMATCH'\n",
     "\n",
     "    print(f'{target[\"image_id\"][0].numpy()}')\n",
     "    print(f'Target   (blue): {t_class}')\n",
-    "    print(f'Predicted (red): {p_class}')\n",
-    "    print(f'IoU:             {iou:0.2}')\n",
+    "    print(f'Predicted (red): {p_class}  {class_flag}')\n",
+    "    print(f'IoU:             {iou:0.2}         {box_flag}')\n",
     "\n",
     "    image = Image.fromarray(image.mul(255).permute(1, 2, 0).byte().numpy())\n",
     "\n",
     "    draw = ImageDraw.Draw(image)\n",
     "\n",
-    "    box = target['boxes'][0].numpy()\n",
     "    draw.rectangle(t_box, width=4, outline='blue')\n",
-    "    draw.rectangle(p_box, width=4, outline='red')\n",
     "\n",
-    "    plt.figure(figsize=(10, 10))\n",
+    "    boxes = prediction[0]['boxes'].cpu().numpy()\n",
+    "    for i, box in enumerate(boxes[::-1], 1):\n",
+    "        # print(i, box)\n",
+    "        color = 'red' if i == len(boxes) else 'yellow'\n",
+    "        draw.rectangle(box, width=4, outline=color)\n",
+    "\n",
+    "    plt.figure(figsize=(figsize, figsize))\n",
     "    plt.imshow(image)\n",
     "\n",
     "\n",
-    "interact(show_results, idx=(0, valid.shape[0] - 1))\n",
-    "# show_results(763)  \n",
+    "interact(\n",
+    "    show_results,\n",
+    "    idx=(0, valid.shape[0] - 1),\n",
+    "    figsize=([5, 8, 10, 12, 15, 20, 25]))\n",
+    "# show_results(0)\n",
     "\n",
-    "# Sideways: 523-541  748-754"
+    "# Sideways: 518-541  748-754\n",
+    "# Interesting: 763,1122\n",
+    "# Better: 1182,1213"
    ]
   },
   {
