Add new image transforms

--- a/02_faster_rcnn_resnet50.ipynb
+++ b/02_faster_rcnn_resnet50.ipynb
@@ -264,6 +264,9 @@
     "    transforms.append(T.ToTensor())\n",
     "    if train:\n",
     "        transforms.append(T.RandomHorizontalFlip(0.5))\n",
+    "        transforms.append(T.RandomVerticalFlip(0.5))\n",
+    "        transforms.append(T.ColorJitter(\n",
+    "            bightness=0.25, contrast=0.25, saturation=0.25, hue=0.25))\n",
     "    return T.Compose(transforms)"
    ]
   },
