Add ability to continue to train existing model

--- a/02_faster_rcnn_resnet50.ipynb
+++ b/02_faster_rcnn_resnet50.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EDT2019-06-22T16:40:59-04:00\n",
+      "EDT2019-06-27T10:07:41-04:00\n",
       "\n",
       "CPython 3.7.3\n",
       "IPython 7.5.0\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,8 @@
     "CATS = ['background', 'handwritten', 'typewritten']\n",
     "CLASSES = len(CATS)\n",
     "\n",
-    "STATE = MODEL_DIR / 'checkpoint_02.pth.tar'"
+    "EPOCHS = 10  # 50\n",
+    "CHECKPOINT = 'checkpoint_{}.pth.tar'"
    ]
   },
   {
@@ -193,10 +194,10 @@
     }
    ],
    "source": [
-    "train = pd.read_csv(TRN_CSV, index_col='subject_id').reset_index()\n",
-    "valid = pd.read_csv(VAL_CSV, index_col='subject_id').reset_index()\n",
+    "trn_df = pd.read_csv(TRN_CSV, index_col='subject_id').reset_index()\n",
+    "val_df = pd.read_csv(VAL_CSV, index_col='subject_id').reset_index()\n",
     "\n",
-    "train.head()"
+    "trn_df.head()"
    ]
   },
   {
@@ -260,13 +261,13 @@
    "outputs": [],
    "source": [
     "def get_transform(train):\n",
-    "    transforms = []\n",
-    "    transforms.append(T.ToTensor())\n",
+    "    transforms = [T.ToTensor()]\n",
     "    if train:\n",
     "        transforms.append(T.RandomHorizontalFlip(0.5))\n",
     "        transforms.append(T.RandomVerticalFlip(0.5))\n",
+    "        transforms.append(T.RandomRotate())\n",
     "        transforms.append(T.ColorJitter(\n",
-    "            bightness=0.25, contrast=0.25, saturation=0.25, hue=0.25))\n",
+    "            brightness=0.25, contrast=0.25, saturation=0.25, hue=0.25))\n",
     "    return T.Compose(transforms)"
    ]
   },
@@ -276,8 +277,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trn_dataset = LabelBabelDataset(train, get_transform(train=True))\n",
-    "val_dataset = LabelBabelDataset(valid, get_transform(train=False))\n",
+    "trn_dataset = LabelBabelDataset(trn_df, get_transform(train=True))\n",
+    "val_dataset = LabelBabelDataset(val_df, get_transform(train=False))\n",
     "\n",
     "torch.manual_seed(SEED)\n",
     "indices = torch.randperm(len(trn_dataset)).tolist()\n",
@@ -303,52 +304,75 @@
     "optimizer = torch.optim.SGD(\n",
     "    params, lr=0.005, momentum=0.9, weight_decay=0.0005)\n",
     "\n",
-    "# and a learning rate scheduler which decreases the learning rate by\n",
-    "# 10x every 3 epochs\n",
     "lr_scheduler = torch.optim.lr_scheduler.StepLR(\n",
-    "    optimizer, step_size=3, gamma=0.1)"
+    "    optimizer, step_size=5, gamma=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('data/models/checkpoint_005.pth.tar')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "state = torch.load(STATE)\n",
+    "last_checkpoint = sorted(MODEL_DIR.glob(CHECKPOINT.format('*')))[-1]\n",
+    "\n",
+    "state = torch.load(last_checkpoint)\n",
+    "\n",
+    "first_epoch = state['epoch']\n",
     "model.load_state_dict(state['state_dict'])\n",
     "optimizer.load_state_dict(state['optimizer'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# num_epochs = 5\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_one_epoch(model, optimizer, trn_loader, DEVICE, epoch, print_freq=100)\n",
-    "#     lr_scheduler.step()\n",
-    "#     evaluate(model, val_loader, device=DEVICE)"
+    "def save_state(epoch, model, optimizer):\n",
+    "    state_path = MODEL_DIR / CHECKPOINT.format(str(epoch).zfill(3))\n",
+    "    if state_path.exists():\n",
+    "        return\n",
+    "    state = {\n",
+    "        'epoch': epoch + 1,\n",
+    "        'state_dict': model.state_dict(),\n",
+    "        'optimizer': optimizer.state_dict(),\n",
+    "    }\n",
+    "    torch.save(state, state_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# state = {\n",
-    "#     'epoch': epoch + 1,\n",
-    "#     'state_dict': model.state_dict(),\n",
-    "#     'optimizer' : optimizer.state_dict(),\n",
-    "# }\n",
+    "def train_model():\n",
+    "    for epoch in range(first_epoch, EPOCHS):\n",
+    "        train_one_epoch(\n",
+    "            model, optimizer, trn_loader, DEVICE, epoch, print_freq=100)\n",
+    "        lr_scheduler.step()\n",
+    "        evaluate(model, val_loader, device=DEVICE)\n",
+    "        if state % 10 == 0:\n",
+    "            save_state(epoch, model, optimizer)\n",
     "\n",
-    "# torch.save(state, STATE)"
+    "    save_state(epoch, model, optimizer)\n",
+    "    \n",
+    "    \n",
+    "train_model()"
    ]
   },
   {
