Save widget state

--- a/02_faster_rcnn_resnet50.ipynb
+++ b/02_faster_rcnn_resnet50.ipynb
@@ -331,12 +331,14 @@
     "\n",
     "first_epoch = state['epoch']\n",
     "model.load_state_dict(state['state_dict'])\n",
-    "optimizer.load_state_dict(state['optimizer'])"
+    "optimizer.load_state_dict(state['optimizer'])\n",
+    "\n",
+    "last_checkpoint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -370,8 +372,8 @@
     "            save_state(epoch, model, optimizer)\n",
     "\n",
     "    save_state(epoch, model, optimizer)\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "train_model()"
    ]
   },
