OCR extracted validation typewritten label images

--- a/02_faster_rcnn_resnet50.ipynb
+++ b/02_faster_rcnn_resnet50.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "import transforms as T\n",
     "from engine import train_one_epoch, evaluate\n",
-    "import utils"
+    "import utils\n",
+    "\n",
+    "from label_babel_dataset import LabelBabelDataset"
    ]
   },
   {
@@ -90,8 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -202,47 +215,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class LabelBabelDataset(torch.utils.data.Dataset):\n",
-    "    def __init__(self, df, transforms):\n",
-    "        df[BOX] = df[BOX].apply(json.loads)\n",
-    "        self.df = df\n",
-    "        self.transforms = transforms\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        subject = self.df.iloc[idx]\n",
-    "\n",
-    "        image = Image.open(subject[PATH]).convert('RGB')\n",
-    "\n",
-    "        klass = int(subject[CLASS])\n",
-    "        labels = torch.full((1,), klass, dtype=torch.int64)\n",
-    "\n",
-    "        boxes = [subject[BOX]]\n",
-    "        boxes = torch.as_tensor(boxes, dtype=torch.float32)\n",
-    "\n",
-    "        area = (boxes[:, 3] - boxes[:, 1]) * (boxes[:, 2] - boxes[:, 0])\n",
-    "\n",
-    "        target = {}\n",
-    "        target['boxes'] = boxes\n",
-    "        target['labels'] = labels\n",
-    "        target['image_id'] = torch.tensor([subject[SUB_ID]])\n",
-    "        target['area'] = area\n",
-    "        target['iscrowd'] = torch.zeros((1,), dtype=torch.int64)\n",
-    "\n",
-    "        if self.transforms is not None:\n",
-    "            image, target = self.transforms(image, target)\n",
-    "\n",
-    "        return image, target\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return self.df.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -273,16 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "trn_dataset = LabelBabelDataset(trn_df, get_transform(train=True))\n",
-    "val_dataset = LabelBabelDataset(val_df, get_transform(train=False))\n",
-    "\n",
-    "torch.manual_seed(SEED)\n",
-    "indices = torch.randperm(len(trn_dataset)).tolist()\n",
-    "\n",
+    "val_dataset = LabelBabelDataset(val_df, get_transform(train=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trn_loader = torch.utils.data.DataLoader(\n",
     "    trn_dataset, batch_size=1, shuffle=True, num_workers=4,\n",
     "    collate_fn=utils.collate_fn)\n",
@@ -374,7 +350,7 @@
     "    save_state(epoch, model, optimizer)\n",
     "\n",
     "\n",
-    "train_model()"
+    "# train_model()"
    ]
   },
   {
