Changes related to the grant submission

--- a/05_tesseract_ocr.ipynb
+++ b/05_tesseract_ocr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +53,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_df = pd.read_csv(VAL_CSV)\n",
-    "val_df[PRED_TEXT] = None"
+    "# CSV = TRN_CSV\n",
+    "CSV = VAL_CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(CSV)\n",
+    "df[PRED_TEXT] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -72,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1216it [06:58,  2.21it/s]\n"
+      "1216it [07:04,  2.86it/s]\n"
      ]
     }
    ],
@@ -85,34 +95,26 @@
     "        path = str(path)\n",
     "        image = Image.open(path)\n",
     "        text = pytesseract.image_to_string(image)\n",
-    "        val_df.at[idx, PRED_TEXT] = text\n",
+    "        df.at[idx, PRED_TEXT] = text\n",
     "\n",
     "\n",
-    "ocr_image(val_df)"
+    "ocr_image(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_df.to_csv(VAL_CSV, index=False)"
+    "df.to_csv(CSV, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1216it [00:00, 5059.14it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# out_dir = DATA_DIR / 'typewritten_labels'\n",
     "# out_dir.mkdir()\n",
@@ -149,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
