--- a/04_pipeline.ipynb
+++ b/04_pipeline.ipynb
@@ -161,8 +161,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1216it [02:11,  9.72it/s]\n",
-      "4865it [08:16,  9.79it/s]\n"
+      "1216it [02:19,  8.70it/s]\n",
+      "4865it [08:58,  9.03it/s]\n"
      ]
     }
    ],
@@ -221,7 +221,8 @@
        "      <th>predicted_class</th>\n",
        "      <th>predicted_category</th>\n",
        "      <th>predicted_box</th>\n",
-       "      <th>box_original</th>\n",
+       "      <th>predicted_text</th>\n",
+       "      <th>predicted_box_original</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -236,6 +237,7 @@
        "      <td>2</td>\n",
        "      <td>typewritten</td>\n",
        "      <td>[230.9855, 463.58728, 365.75626, 570.29736]</td>\n",
+       "      <td>FLORA OF ARK:\\n\\nCORNACEAE Cornus drummondii €...</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -249,6 +251,7 @@
        "      <td>2</td>\n",
        "      <td>typewritten</td>\n",
        "      <td>[235.45955, 464.4702, 376.1618, 573.8489]</td>\n",
+       "      <td>FLORA OF ARKANSAS.\\nCULTIVATED!\\nCORNACEAE\\n\\n...</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -262,6 +265,7 @@
        "      <td>1</td>\n",
        "      <td>handwritten</td>\n",
        "      <td>[255.06477, 481.98413, 373.10254, 568.11176]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -274,7 +278,8 @@
        "      <td>data/images/2995213.jpg</td>\n",
        "      <td>2</td>\n",
        "      <td>typewritten</td>\n",
-       "      <td>[224.79488, 476.49863, 370.26645, 565.2874]</td>\n",
+       "      <td>[224.79485, 476.49863, 370.26642, 565.2874]</td>\n",
+       "      <td>CORNACEAE\\nHERBARIUM OF THE UNIVERSITY OF ARKA...</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -288,6 +293,7 @@
        "      <td>1</td>\n",
        "      <td>handwritten</td>\n",
        "      <td>[235.82883, 460.7853, 369.38535, 562.74536]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -313,15 +319,15 @@
        "0        typewritten   [230.9855, 463.58728, 365.75626, 570.29736]   \n",
        "1        typewritten     [235.45955, 464.4702, 376.1618, 573.8489]   \n",
        "2        handwritten  [255.06477, 481.98413, 373.10254, 568.11176]   \n",
-       "3        typewritten   [224.79488, 476.49863, 370.26645, 565.2874]   \n",
+       "3        typewritten   [224.79485, 476.49863, 370.26642, 565.2874]   \n",
        "4        handwritten   [235.82883, 460.7853, 369.38535, 562.74536]   \n",
        "\n",
-       "  box_original  \n",
-       "0         None  \n",
-       "1         None  \n",
-       "2         None  \n",
-       "3         None  \n",
-       "4         None  "
+       "                                      predicted_text predicted_box_original  \n",
+       "0  FLORA OF ARK:\\n\\nCORNACEAE Cornus drummondii €...                   None  \n",
+       "1  FLORA OF ARKANSAS.\\nCULTIVATED!\\nCORNACEAE\\n\\n...                   None  \n",
+       "2                                                NaN                   None  \n",
+       "3  CORNACEAE\\nHERBARIUM OF THE UNIVERSITY OF ARKA...                   None  \n",
+       "4                                                NaN                   None  "
       ]
      },
      "execution_count": 10,
@@ -340,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,15 +359,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1216it [01:49,  8.89it/s]\n",
-      "4865it [07:10, 11.30it/s]\n"
+      "1216it [01:13, 16.50it/s]\n",
+      "4865it [04:29, 18.05it/s]\n"
      ]
     }
    ],
@@ -377,7 +383,10 @@
     "        if sum(x for x in box) == 0:\n",
     "            continue\n",
     "        image = Image.open(src).convert('RGB')\n",
+    "        width, height = image.size\n",
     "        image = image.crop(box)\n",
+    "        if width > height:\n",
+    "            image = image.transpose(Image.ROTATE_270)\n",
     "        image.save(dst)\n",
     "\n",
     "\n",
@@ -419,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
