--- a/05_tesseract_ocr.ipynb
+++ b/05_tesseract_ocr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import pdb\n",
     "\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
     "from ipywidgets import interact\n",
     "from PIL import Image\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,37 +74,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1216it [07:04,  2.86it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae4346713eca459c9a4c3c1360f65c68",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=607, description='idx', max=1215), Output()), _dom_classes=('widget-inte…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "def ocr_image(df):\n",
-    "    for idx, row in tqdm(df.iterrows()):\n",
-    "        if row.at[PRED_CAT] != TYPEWRITTEN:\n",
-    "            continue\n",
-    "        path = Path(TYPE_DIR / '{}.jpg'.format(row.at[SUB_ID]))\n",
-    "        path = str(path)\n",
-    "        image = Image.open(path)\n",
-    "        text = pytesseract.image_to_string(image)\n",
-    "        df.at[idx, PRED_TEXT] = text\n",
+    "CONFIG = ' '.join([\n",
+    "    '-l eng',\n",
+    "    \"-c tessedit_char_blacklist='€«¢»£®'\",\n",
+    "    '',\n",
+    "])\n",
     "\n",
     "\n",
-    "ocr_image(df)"
+    "def show_results(idx):\n",
+    "    row = df.loc[idx]\n",
+    "    subject_id = int(row.at[SUB_ID])\n",
+    "    print(subject_id)\n",
+    "    if row.at[PRED_CAT] != TYPEWRITTEN:\n",
+    "        print('Not typewritten')\n",
+    "        return\n",
+    "    path = Path(TYPE_DIR / f'{subject_id}.jpg')\n",
+    "    path = str(path)\n",
+    "    image = Image.open(path)\n",
+    "    text = pytesseract.image_to_string(image, config=CONFIG)\n",
+    "\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(20, 10))\n",
+    "    plt.axis('off')\n",
+    "\n",
+    "    ax[0].set_axis_off()\n",
+    "    ax[0].imshow(image)\n",
+    "\n",
+    "    ax[1].text(0, 0.5, text, fontsize=16, verticalalignment='center')\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "interact(show_results, idx=(0, df.shape[0] - 1));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
