--- a/notebooks/05_tesseract_ocr.ipynb
+++ b/notebooks/05_tesseract_ocr.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from shutil import copyfile\n",
     "from pathlib import Path\n",
+    "from datetime import date\n",
     "import pdb\n",
     "\n",
     "import pandas as pd\n",
@@ -26,6 +27,9 @@
    "source": [
     "DATA_DIR = Path('.') / 'data'\n",
     "\n",
+    "PROJECT = 'label_babel'\n",
+    "TODAY = date.today().isoformat()\n",
+    "\n",
     "TRN_DIR = DATA_DIR / 'train'\n",
     "VAL_DIR = DATA_DIR / 'valid'\n",
     "MODEL_DIR = DATA_DIR / 'models'\n",
@@ -34,6 +38,9 @@
     "\n",
     "VAL_CSV = DATA_DIR / 'valid.csv'\n",
     "TRN_CSV = DATA_DIR / 'train.csv'\n",
+    "\n",
+    "VAL_OUT_CSV = DATA_DIR / f'{PROJECT}_valid_{TODAY}.csv'\n",
+    "TRN_OUT_CSV = DATA_DIR / f'{PROJECT}_train_{TODAY}.csv'\n",
     "\n",
     "BOX = 'box'\n",
     "CAT = 'category'\n",
@@ -58,8 +65,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CSV = TRN_CSV\n",
-    "CSV = VAL_CSV"
+    "CSV = TRN_CSV\n",
+    "OUT_CSV = TRN_OUT_CSV\n",
+    "\n",
+    "# CSV = VAL_CSV\n",
+    "# OUT_CSV = VAL_OUT_CSV"
    ]
   },
   {
@@ -74,34 +84,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae4346713eca459c9a4c3c1360f65c68",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=607, description='idx', max=1215), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "CONFIG = ' '.join([\n",
     "    '-l eng',\n",
     "    \"-c tessedit_char_blacklist='€«¢»£®'\",\n",
     "    '',\n",
-    "])\n",
-    "\n",
-    "\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "def show_results(idx):\n",
     "    row = df.loc[idx]\n",
     "    subject_id = int(row.at[SUB_ID])\n",
@@ -125,41 +126,81 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "interact(show_results, idx=(0, df.shape[0] - 1));"
+    "# interact(show_results, idx=(0, df.shape[0] - 1));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(CSV, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# out_dir = DATA_DIR / 'typewritten_labels'\n",
-    "# out_dir.mkdir()\n",
+    "def output_results(idx):\n",
+    "    row = df.loc[idx]\n",
+    "    subject_id = int(row.at[SUB_ID])\n",
+    "    \n",
+    "    if row.at[PRED_CAT] != TYPEWRITTEN:\n",
+    "        return\n",
+    "    \n",
+    "    path = Path(TYPE_DIR / f'{subject_id}.jpg')\n",
+    "    path = str(path)\n",
+    "    image = Image.open(path)\n",
+    "    text = pytesseract.image_to_string(image, config=CONFIG)\n",
     "\n",
-    "# for idx, row in tqdm(val_df.iterrows()):\n",
-    "#     if row.at[PRED_CAT] != TYPEWRITTEN:\n",
-    "#         continue\n",
-    "#     src = TYPE_DIR / '{}.jpg'.format(row.at[SUB_ID])\n",
-    "#     dst = out_dir / '{}.jpg'.format(row.at[SUB_ID])\n",
-    "#     copyfile(src, dst)"
+    "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4865/4865 [30:24<00:00,  2.67it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in tqdm(df.index):\n",
+    "    df.at[idx, PRED_TEXT] = output_results(idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    University of Arkansas Herbarium (UARK)\\nFlora...\n",
+       "1    APPALACHIAN STATE UNIVERSITY HERBARION\\nPLANTS...\n",
+       "2    a .\\n\\nAPPALACHIAN STATE UNV ERSTHY EMIS RIA\\n...\n",
+       "3    AMARAA YHA CE AE\\nHERBARIUM\\nNORTHEAST LOUISIA...\n",
+       "4    FLORA OF ARKANSAS\\nPoinsett County\\n\\nPOACEAE\\...\n",
+       "Name: predicted_text, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[PRED_TEXT].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(OUT_CSV, index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -178,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.0"
   },
   "toc": {
    "base_numbering": 1,
