--- a/notebooks/05_tesseract_ocr.ipynb
+++ b/notebooks/05_tesseract_ocr.ipynb
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = Path('.') / 'data'\n",
+    "DATA_DIR = Path('..') / 'data'\n",
     "\n",
     "PROJECT = 'label_babel'\n",
     "TODAY = date.today().isoformat()\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,11 +97,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ad9ec7681c94d2ea1830d8037641a77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=2432, description='idx', max=4864), Output()), _dom_classes=('widget-int…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def show_results(idx):\n",
     "    row = df.loc[idx]\n",
@@ -121,12 +136,13 @@
     "    ax[0].set_axis_off()\n",
     "    ax[0].imshow(image)\n",
     "\n",
-    "    ax[1].text(0, 0.5, text, fontsize=16, verticalalignment='center')\n",
+    "    ax[1].text(0, 0.5, text, fontsize=16, verticalalignment='center', \n",
+    "               backgroundcolor='w')\n",
     "\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "# interact(show_results, idx=(0, df.shape[0] - 1));"
+    "interact(show_results, idx=(0, df.shape[0] - 1));"
    ]
   },
   {
@@ -219,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
