--- a/notebooks/07_score_ocr.ipynb
+++ b/notebooks/07_score_ocr.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
     "    'char_score': char_scores}\n",
     "\n",
     "df2 = pd.DataFrame(data=data)\n",
-    "df2.to_csv(DATA_DIR / 'OCR_scores.csv', index=False)\n",
+    "# df2.to_csv(DATA_DIR / 'OCR_scores.csv', index=False)\n",
     "df2.head()"
    ]
   },
@@ -568,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
